fix spacing on the help text for featured image

--- a/includes/settings/scss/_forms.scss
+++ b/includes/settings/scss/_forms.scss
@@ -202,7 +202,7 @@ input[type="radio"] {
 }
 
 .atlas-content-modeler-admin-page .featured-image.help {
-	margin: 0 0 0 27px;
+	margin: 5px 0 0 27px;
 }
 
 .atlas-content-modeler-admin-page .radio-row {
